<resources>
    <string name="app_name">Iwan Motor</string>
    <!--  Login -->
    <string name="HeaderMasuk">Masuk Akun</string>
    <string name="boxEmail">Alamat Email</string>
    <string name="boxPassword">Password</string>
    <string name="submitMasuk">Masuk</string>
    <string name="belumDaftar">Belum mempunyai akun ?</string>
    <string name="linkDaftar">Daftar di sini</string>
    <!--  Register -->
    <string name="HeaderDaftar">Daftar Akun</string>
    <string name="boxNama">Nama Lengkap</string>
    <string name="submitDaftar">Daftar</string>
    <string name="sudahDaftar">Sudah mempunyai akun ?</string>
    <string name="linkMasuk">Masuk di sini</string>

    <!--    Dashboard -->
    <string name="home_greeting">Hello, User</string>
    <string name="datetime">Monday,17 May 2022</string>
    <string name="Dashboard"><u>Dashboard</u></string>

    <string name="angkatotal_penjualan">2</string>
    <string name="total_penjualan">Total Penjualan</string>
    <string name="ic_totalPenjualan">Icon Total Penjualan</string>

    <string name="angkatotal_stok">20</string>
    <string name="total_stok">Total Stok Barang</string>
    <string name="ic_totalStok">Icon Total Stok Barang</string>

    <string name="angkatotal_kaskeluar">20</string>
    <string name="kaskeluar">Total Kas Keluar</string>
    <string name="ic_totalkaskeluar">Icon Total Kas Keluar</string>

    <string name="angkatotal_kasmasuk">246.604</string>
    <string name="kasmasuk">Total Kas Masuk</string>
    <string name="ic_totalkasmasuk">Icon Total Kas Masuk</string>

    <string name="angkatotal_kas">246.604</string>
    <string name="kas">Total Kas</string>
    <string name="ic_totalkas">Icon Total Kas</string>

    <!--    Navbar -->
    <string name="title_home">Home</string>
    <string name="title_kas">Transaksi</string>
    <string name="title_barang">Barang</string>

    <!--    Activity barang -->
    <string name="title_activitybarang"><u>Data Barang</u></string>
    <string name="namaproduk">Nama Produk</string>
    <string name="hargamodal">Harga Modal</string>
    <string name="hargajual">Harga Jual</string>
    <string name="stok">Stok</string>
    <string name="tglmasuk">Tanggal Masuk</string>
    <string name="tambahbarangbaru">Tambah barang baru</string>
    <string name="title_tambah_barang"><u>Tambah Barang</u></string>
    <string name="title_edit_barang"><u>Detail Barang</u></string>
    <string name="tambahdata">Tambah</string>
    <string name="hapusdata">Hapus</string>

    <!--    Activity Kwitansi -->
    <string name="title_kwitansi">Tambah Kwitansi</string>


    <!-- Activity Barang -->
    <string name="title_transaksi"> <u>Data Transaksi</u> </string>
    <string name="tambahtransaksibaru">Tambah Transaksi Baru</string>
    <string name="invoice">Invoice</string>
    <string name="jumlah">Jumlah</string>
    <string name="subtotal">Subtotal</string>
    <string name="tglpembelian">Tanggal Pembelian</string>
    <string name="title_tambahtransaksi">Tambah Transaksi</string>
    <string name="harga">Harga</string>
    <string name="simpan">Simpan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_symbol">IDR</string>
    <string name="delete_question">Apakah anda yakin untuk ngehapus data ini?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="title_detail_transaksi"><u>Detail Transaksi</u></string>
    <string name="Penerima">Telah terima dari</string>
    <string name="Alamat">Alamat</string>
    <string name="no_hp">No. HP</string>
    <string name="jumlah_uang">Uang Sejumlah</string>
    <string name="keterangan">Untuk Pembayaran</string>
    <string name="type_txt">Type</string>
    <string name="no_rangka">No. Rangka</string>
    <string name="no_mesin">No. Mesin</string>
    <string name="no_pol">No. Pol</string>
    <string name="warna_txt">Warna</string>
    <string name="Kwitansi">Kwitansi</string>
    <string name="data_kwitansi"><u>Data Kwitansi</u></string>

</resources>