<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/item_namaproduk"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/namaproduk"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_hargamodal"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="5dp"
        android:text="@string/hargamodal"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_hargajual"
        app:layout_constraintStart_toEndOf="@+id/item_namaproduk"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_hargajual"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/hargajual"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_stok"
        app:layout_constraintStart_toEndOf="@+id/item_hargamodal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_stok"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/stok"


        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_tglmasuk"
        app:layout_constraintStart_toEndOf="@id/item_hargajual"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_tglmasuk"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="25dp"
        android:text="@string/tglmasuk"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_stok"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>