<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/item_invoice"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/invoice"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_jumlah"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/jumlah"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@id/item_subtotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_invoice"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/item_subtotal"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:layout_marginStart="25dp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_tglBeli"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toEndOf="@+id/item_jumlah"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/item_tglBeli"
        android:layout_width="107dp"
        android:layout_height="14dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="15dp"
        android:text="@string/tglpembelian"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_subtotal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />


</androidx.constraintlayout.widget.ConstraintLayout>